<resources>
    <string name="app_name">WealthManagement</string>

    <string name="transactions">Transactions</string>
    <string name="reminder">Reminder</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="action_settings">Settings</string>

    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="heading">Heading</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="addto">Add to</string>

    <string name="firstname">First Name</string>
    <string name="email">E-mail</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>

    <string name="signin">Sign In</string>
    <string name="signup">Sign UP</string>
    <string name="forgot">Forget password?</string>

    <string name="ct">Category</string>
    <string name="dt">Date</string>
    <string name="pr">Price</string>
</resources>
