<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:padding="6dip">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <Button android:id="@+id/transactions"
                style="@style/HomeButton"
                android:onClick="onButtonClicker"
                android:text="@string/transactions"
                android:drawableTop="@drawable/transactions"/>
            <Button android:id="@+id/history"
                style="@style/HomeButton"
                android:onClick="onButtonClicker"
                android:text="@string/history"
                android:drawableTop="@drawable/history"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
            <Button android:id="@+id/settings"
                style="@style/HomeButton"
                android:onClick="onButtonClicker"
                android:text="@string/settings"
                android:drawableTop="@drawable/settings"/>
            <Button android:id="@+id/time"
                style="@style/HomeButton"
                android:onClick="onButtonClicker"
                android:text="@string/reminder"
                android:drawableTop="@drawable/time"/>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>