<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/categoryTxt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:textSize="20sp"
        android:singleLine="true"
        android:text="@string/category" >
    </TextView>

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:textSize="20sp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/dt" >
    </TextView>

    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:background="@drawable/cell_shape"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/pr" >
    </TextView>



</LinearLayout>