<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="4dp">

        <Button
            android:id="@+id/Income_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/ColorPrimary"
            android:text="Income"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/Expense_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/ColorPrimary"
            android:text="Expense"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/price"
            android:textSize="14sp"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/priceEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Enter Price Here"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:letterSpacing="0.025"
            android:background="#fff"
            android:textSize="16dp"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/date"
            android:textSize="14sp"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/dateEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Enter date Here"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:drawableRight="@drawable/calendar"
            android:focusableInTouchMode="false"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:letterSpacing="0.025"
            android:background="#fff"
            android:textSize="16dp"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/time"
            android:textSize="14sp"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/timeEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Enter time Here"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:drawableRight="@drawable/clock"
            android:focusableInTouchMode="false"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:letterSpacing="0.025"
            android:background="#fff"
            android:textSize="16dp"
            android:padding="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/descriptionsEdt"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="Enter item description"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_height="80dip"
            android:focusableInTouchMode="false"
            android:layout_margin="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:letterSpacing="0.025"
            android:background="#fff"
            android:textSize="16dp"
            android:padding="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category"
                android:textSize="14sp"
                android:layout_below="@+id/price"
                android:layout_centerHorizontal="true" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/paymentmethod"
                android:textSize="14sp"
                android:layout_below="@+id/price"
                android:layout_centerHorizontal="true" />

            <Spinner
                android:id="@+id/paymentSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@drawable/profile_circular_border_imageview" />

                <Button
                    android:id="@+id/next_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_view"
                    android:onClick="nextImage"
                    android:text="Next Image" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/saveBtn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Save"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    android:layout_weight="1">
                </Button>
                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reset"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    android:layout_weight="1">
                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
